--- a/TopShelfCustomer/TopShelfCustomer.Android/TopShelfCustomer.Android.csproj
+++ b/TopShelfCustomer/TopShelfCustomer.Android/TopShelfCustomer.Android.csproj
@@ -130,5 +130,16 @@
   <ItemGroup>
     <GoogleServicesJson Include="google-services.json" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\FiraSans-Bold.ttf" />
+    <AndroidAsset Include="Assets\FiraSans-BoldItalic.ttf" />
+    <AndroidAsset Include="Assets\FiraSans-Italic.ttf" />
+    <AndroidAsset Include="Assets\FiraSans-Medium.ttf" />
+    <AndroidAsset Include="Assets\FiraSans-MediumItalic.ttf" />
+    <AndroidAsset Include="Assets\FiraSans-Regular.ttf" />
+    <AndroidAsset Include="Assets\FiraSans-SemiBold.ttf" />
+    <AndroidAsset Include="Assets\FiraSans-SemiBoldItalic.ttf" />
+    <AndroidAsset Include="Assets\OFL.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
