--- a/TopShelfCustomer/TopShelfCustomer.iOS/TopShelfCustomer.iOS.csproj
+++ b/TopShelfCustomer/TopShelfCustomer.iOS/TopShelfCustomer.iOS.csproj
@@ -93,37 +93,6 @@
     <BundleResource Include="Resources\menu_48.png" />
     <BundleResource Include="Resources\news_48.png" />
     <BundleResource Include="Resources\secure_letter_48.png" />
-    <BundleResource Include="Resources\AppIcons\app_logo_20.png" />
-    <BundleResource Include="Resources\AppIcons\app_logo_29.png" />
-    <BundleResource Include="Resources\AppIcons\app_logo_40.png" />
-    <BundleResource Include="Resources\AppIcons\app_logo_58.png" />
-    <BundleResource Include="Resources\AppIcons\app_logo_60.png" />
-    <BundleResource Include="Resources\AppIcons\app_logo_76.png" />
-    <BundleResource Include="Resources\AppIcons\app_logo_80.png" />
-    <BundleResource Include="Resources\AppIcons\app_logo_120.png" />
-    <BundleResource Include="Resources\AppIcons\app_logo_152.png" />
-    <BundleResource Include="Resources\AppIcons\app_logo_167.png" />
-    <BundleResource Include="Resources\AppIcons\app_logo_180.png" />
-    <BundleResource Include="Resources\AppIcons\app_logo_1024.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_1024.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_120.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_120-1.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_80.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_40.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_60.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_58.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_180.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_20.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_40-1.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_29.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_58-1.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_40-2.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_80-1.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_76.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_152.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_167.png" />
-    <BundleResource Include="Resources\AppIcons\app_logo_87.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_87.png" />
     <BundleResource Include="GoogleService-Info.plist" />
     <BundleResource Include="Resources\FiraSans-Bold.ttf" />
     <BundleResource Include="Resources\FiraSans-BoldItalic.ttf" />
@@ -133,6 +102,42 @@
     <BundleResource Include="Resources\FiraSans-SemiBold.ttf" />
     <BundleResource Include="Resources\FiraSans-SemiBoldItalic.ttf" />
     <BundleResource Include="Resources\OFL.txt" />
+    <BundleResource Include="Resources\gradient_background.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_20.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_29.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_40.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_58.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_60.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_76.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_80.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_87.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_120.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_152.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_167.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_180.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_512.png" />
+    <BundleResource Include="Resources\AppIcons\app_logo_1024.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_1024.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_120.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_152.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_167.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_180.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_20.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_29.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_58.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_80.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_80-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_120-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_40.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_40-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_60.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_58-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_87.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_40-2.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_76.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_120-2.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_1024-1.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\app_logo_1024-2.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
