--- a/TopShelfCustomer/TopShelfCustomer/TopShelfCustomer.csproj
+++ b/TopShelfCustomer/TopShelfCustomer/TopShelfCustomer.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.991211" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Remove="Views\ItemDetailPage.xaml" />
