Added SqlDataAccess class and xml docs for api

--- a/TopShelfCustomer/TopShelfCustomer.Api/Web.config
+++ b/TopShelfCustomer/TopShelfCustomer.Api/Web.config
@@ -10,8 +10,12 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="TopShelfDbConnection" connectionString="Data Source=tcp:topshelfcustomerapidbserver.database.windows.net,1433;Initial Catalog=TopShelfCustomerApi_db;User Id=topshelfdev@topshelfcustomerapidbserver;Password=TopShelf123456" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
+    <customErrors mode="Off" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <system.webServer>
