--- a/TopShelfCustomer/TopShelfCustomer.Android/TopShelfCustomer.Android.csproj
+++ b/TopShelfCustomer/TopShelfCustomer.Android/TopShelfCustomer.Android.csproj
@@ -59,6 +59,12 @@
     <PackageReference Include="Xamarin.Firebase.Auth">
       <Version>71.1605.0</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="System.Net.Http">
+      <Version>4.3.4</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
