--- a/TopShelfCustomer/TopShelfCustomer/TopShelfCustomer.csproj
+++ b/TopShelfCustomer/TopShelfCustomer/TopShelfCustomer.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.991211" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Remove="Views\ItemDetailPage.xaml" />
