Implemented API changes to Xamarin project

--- a/TopShelfCustomer/TopShelfCustomer.Api/Web.config
+++ b/TopShelfCustomer/TopShelfCustomer.Api/Web.config
@@ -14,7 +14,11 @@
     <add name="TopShelfDbConnection" connectionString="Data Source=tcp:topshelfcustomerapidbserver.database.windows.net,1433;Initial Catalog=TopShelfCustomerApi_db;User Id=topshelfdev@topshelfcustomerapidbserver;Password=TopShelf123456" />
   </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
+    <compilation debug="true" targetFramework="4.7.2">
+      <assemblies>
+        <add assembly="System.Net.Http.WebRequest, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>
     <customErrors mode="Off" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
