--- a/TopShelfCustomer/TopShelfCustomer.Api/TopShelfCustomer.Api.csproj
+++ b/TopShelfCustomer/TopShelfCustomer.Api/TopShelfCustomer.Api.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\CouponController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\StoreController.cs" />
@@ -173,10 +174,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Coupon.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Store.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CouponData.cs" />
     <Compile Include="Services\ProductData.cs" />
     <Compile Include="Services\SqlDataAccess.cs" />
     <Compile Include="Services\StoreData.cs" />
