--- a/TopShelfCustomer/TopShelfCustomer/TopShelfCustomer.csproj
+++ b/TopShelfCustomer/TopShelfCustomer/TopShelfCustomer.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Remove="Views\ItemDetailPage.xaml" />
